New project structure with xUnit

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,7 @@
     "Contest": {
       "NRounds": 100000,
       "NJuniorsTeamleads": 20,
-      "JuniorsPath": "Res/Juniors20.csv",
-      "TeamleadsPath": "Res/Teamleads20.csv"
+      "JuniorsPath": "Nsu.Contest/Res/Juniors20.csv",
+      "TeamleadsPath": "Nsu.Contest/Res/Teamleads20.csv"
     }
   }
